--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "twilio-run",
-    "deploy": "twilio-run deploy"
+    "deploy": "twilio-run deploy",
+    "build-assets": "webpack --config webpack.config.js"
   },
   "dependencies": {
     "twilio": "^3.56"
   },
   "devDependencies": {
-    "twilio-run": "^2.6.0"
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "twilio-run": "^2.6.0",
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.5.0"
   },
   "engines": {
     "node": "10"
